--- a/source/form.html
+++ b/source/form.html
@@ -58,17 +58,18 @@
             <legend class="visually-hidden">Кошачьи данные</legend>
             <div class="details__item">
               <label class="details__item-name details__item-name--name" for="details-name">Имя:*</label>
-              <input class="details__item-text details__item-text--name " type="text" name="details-name" id="details-name" placeholder="Барсик"
-                required>
+              <input class="details__item-text details__item-text--name " type="text" name="details-name"
+                id="details-name" placeholder="Барсик" required>
             </div>
             <div class="details__item">
               <label class="details__item-name details__item-name--weight" for="details-weight">Вес (кг):*</label>
-              <input class="details__item-text details__item-text--weight " type="number" name="details-weight" id="details-weight" placeholder="7"
-                required>
+              <input class="details__item-text details__item-text--weight " type="number" name="details-weight"
+                id="details-weight" placeholder="7" required>
             </div>
             <div class="details__item">
               <label class="details__item-name details__item-name--age" for="details-age">Возраст (лет):</label>
-              <input class="details__item-text details__item-text--age " type="number" name="details-age" id="details-age" placeholder="7">
+              <input class="details__item-text details__item-text--age " type="number" name="details-age"
+                id="details-age" placeholder="7">
             </div>
           </fieldset>
 
@@ -77,8 +78,7 @@
             <ul class="program-type__list">
               <li class="program-type__item">
                 <label class="program-type__control program-type__control--weight-loss">
-                  <input class="program-type__control-input visually-hidden" type="radio" name="program"
-                    checked >
+                  <input class="program-type__control-input visually-hidden" type="radio" name="program" checked>
                   <span class="program-type__control-mark-radio"></span>
                   <span class="program-type__control-label">Похудение</span>
                 </label>
@@ -105,8 +105,8 @@
           <div class="form-contact__item">
             <label class="form-contact__item-name form-contact__item-name--email" for="email">E-mail:*</label>
             <div class="form-contact__item-wrapper form-contact__item-wrapper--email">
-              <input class="form-contact__input-detail form-contact__input-detail--email" type="email" placeholder="kuklachev@gmail.com" name="email"
-                id="email" required>
+              <input class="form-contact__input-detail form-contact__input-detail--email" type="email"
+                placeholder="kuklachev@gmail.com" name="email" id="email" required>
 
               <svg class="form-contact__email-logo" width="19" height="14" viewBox="0 0 19 14" fill="none">
                 <use href="./img/sprite.svg#email" />
@@ -117,8 +117,8 @@
           <div class="form-contact__item">
             <label class="form-contact__item-name form-contact__item-name--phone" for="phone">Телефон:*</label>
             <div class="form-contact__item-wrapper form-contact__item-wrapper--phone">
-              <input class="form-contact__input-detail form-contact__input-detail--phone" type="tel" placeholder="8 (960) 900-60-90" name="phone"
-                id="phone" required>
+              <input class="form-contact__input-detail form-contact__input-detail--phone" type="tel"
+                placeholder="8 (960) 900-60-90" name="phone" id="phone" required>
 
               <svg class="form-contact__phone-logo" width="20" height="21" viewBox="0 0 20 21" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -200,7 +200,7 @@
     <div class="main-footer__wrapper container-content">
       <a class="main-footer__link" href="index.html">
         <svg width="128" height="24">
-          <use href="img/sprite.svg#site-logo-footer"/>
+          <use href="img/sprite.svg#site-logo-footer" />
         </svg>
       </a>
       <ul class="main-footer__social-list social-list">
@@ -215,8 +215,8 @@
         <li class="social-list__item">
           <a class="social-list__link" href="">
             <span class="visually-hidden">Ютуб</span>
-            <svg width="24" height="19" >
-              <use href="img/sprite.svg#youtube"/>
+            <svg width="24" height="19">
+              <use href="img/sprite.svg#youtube" />
             </svg>
           </a>
         </li>
@@ -233,7 +233,7 @@
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <b class="copyright__text">HTML Academy</b>
           <svg width="27" height="34">
-            <use href="img/sprite.svg#html-academy-logo"/>
+            <use href="img/sprite.svg#html-academy-logo" />
           </svg>
         </a>
       </div>
