--- a/source/index.html
+++ b/source/index.html
@@ -72,7 +72,6 @@
           <img class="search-form__image" src="img/index-can-mobile.png" width="280" height="270"
             srcset="img/index-can-mobile@2x.png 2x" alt="Банка кошачьей еды">
         </picture>
-
         <a class="search-form__button button" href="form.html">подобрать программу</a>
       </div>
     </section>
@@ -87,7 +86,8 @@
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy
               Slim поможет вашему питомцу сбросить лишний вес.
             </p>
-            <a class="programs__link programs__link--slim programs__link--has-icon programs__link--icon_arrow" href="#">каталог slim</a>
+            <a class="programs__link programs__link--slim programs__link--has-icon programs__link--icon_arrow"
+              href="#">каталог slim</a>
           </li>
           <li class="programs__item programs__item--weight-gain">
             <h3 class="programs__title">Набор массы</h3>
@@ -95,7 +95,8 @@
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту
               нарастить необходимые мышцы!
             </p>
-            <a class="programs__link programs__link--pro programs__link--has-icon programs__link--icon_arrow" href="#">каталог pro</a>
+            <a class="programs__link programs__link--pro programs__link--has-icon programs__link--icon_arrow"
+              href="#">каталог pro</a>
           </li>
         </ul>
       </div>
@@ -126,7 +127,7 @@
           <li class="features__item features__item--result">
             <div class="features__square features__square--result"></div>
             <p class="features__description features__description--result">
-              Уже через месяц наслаждайтесь изменениями к лучшему <br> вашего питомца!
+              Уже через месяц наслаждайтесь изменениями к лучшему &nbsp; вашего питомца!
             </p>
           </li>
         </ul>
@@ -188,7 +189,7 @@
               <div class="example__range-scale-circle">
                 <button class="example__range-scale-button" type="button">
                   <svg width="24" height="18" viewBox="0 0 24 18" fill="currentColor">
-                    <use href="img/sprite.svg#slider-button"/>
+                    <use href="img/sprite.svg#slider-button" />
                   </svg>
                 </button>
               </div>
@@ -218,7 +219,7 @@
       <a class="main-footer__link" href="index.html">
         <span class="visually-hidden">Логотип Кэт Энерджи</span>
         <svg width="128" height="24">
-          <use href="img/sprite.svg#site-logo-footer"/>
+          <use href="img/sprite.svg#site-logo-footer" />
         </svg>
       </a>
       <ul class="main-footer__social-list social-list">
@@ -233,8 +234,8 @@
         <li class="social-list__item">
           <a class="social-list__link" href="">
             <span class="visually-hidden">Ютуб</span>
-            <svg width="24" height="19" >
-              <use href="img/sprite.svg#youtube"/>
+            <svg width="24" height="19">
+              <use href="img/sprite.svg#youtube" />
             </svg>
           </a>
         </li>
@@ -251,7 +252,7 @@
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <b class="copyright__text">HTML Academy</b>
           <svg width="27" height="34">
-            <use href="img/sprite.svg#html-academy-logo"/>
+            <use href="img/sprite.svg#html-academy-logo" />
           </svg>
         </a>
       </div>
